[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zone-poker"
version = "1.0.7"
authors = [
  { name="BranchingBad" },
]
description = "A professional DNS reconnaissance and OSINT tool for comprehensive domain analysis."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: Internet :: Name Service (DNS)",
    "Environment :: Console",
]
# Project dependencies
dependencies = [
    "dnspython~=2.6",
    "httpx~=0.27",
    "python-whois~=0.8",
    "ipwhois~=1.2",
    "rich~=13.7",
    "beautifulsoup4~=4.12",
    "mmh3~=4.1",
    "PyYAML~=6.0",
    "tldextract~=5.1"
]

[project.urls]
Homepage = "https://github.com/BranchingBad/zone-poker"
Issues = "https://github.com/BranchingBad/zone-poker/issues"

# This creates the executable script
[project.scripts]
zone-poker = "zone_poker:main_wrapper"

[project.optional-dependencies]
dev = [
    "pytest~=8.1",
    "flake8~=7.0",
    "black~=24.4",
    "pre-commit~=3.7",
    "pytest-cov~=5.0",
    "pytest-asyncio~=0.23",
    "bandit~=1.7",
    "pip-audit~=2.7",
    "respx~=0.21"
]

# --- THIS IS THE FIX ---
[tool.setuptools]
py-modules = ["zone_poker"]
[tool.setuptools.packages.find]
where = ["."]
include = ["modules*"]
[tool.setuptools.package-data]
"modules.analysis" = ["*.json"]