[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zone-poker"
version = "1.0.7"
authors = [
  { name="BranchingBad" },
]
description = "A professional DNS reconnaissance and OSINT tool for comprehensive domain analysis."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: Internet :: Name Service (DNS)",
    "Environment :: Console",
]
# Project dependencies
dependencies = [
    "dnspython~=2.6",
    "httpx~=0.27",
    "python-whois~=0.8",
    "ipwhois~=1.2",
    "rich~=14.2",
    "beautifulsoup4~=4.12",
    "mmh3~=5.2",
    "PyYAML>=6.0.1,<7.0",
    "tldextract~=5.3"
]

[project.urls]
Homepage = "https://github.com/BranchingBad/zone-poker"
Issues = "https://github.com/BranchingBad/zone-poker/issues"

# This creates the executable script
[project.scripts]
zone-poker = "zone_poker:main_wrapper"

[project.optional-dependencies]
dev = [
    "pytest~=9.0",
    "flake8~=7.0",
    "black~=25.11",
    "pre-commit~=4.4",
    "pytest-cov~=7.0",
    "pytest-asyncio~=1.3",
    "bandit~=1.7",
    "pip-audit~=2.9",
    "respx~=0.21",
    "pip-tools~=7.4" # For dependency locking
]

[tool.setuptools]
[tool.setuptools.packages.find]
where = ["."] # Look for packages in the project root



[tool.setuptools.package-data]
"modules.analysis" = ["*.json"]